--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -7,7 +7,7 @@
       <p class="card-text mb-4">
         A página que você está procurando não existe ou foi movida.
       </p>
-      <a routerLink="/" class="btn btn-outline-primary">
+      <a routerLink="/" id="link-voltar-inicio" class="btn btn-outline-primary">
         Voltar para a página inicial
       </a>
     </div>
