--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -11,7 +11,7 @@
         matTooltip="Página Inicial"
         matTooltipPosition="above"
         matTooltipHideDelay="500"
-        id="logo"
+        id="link-voltar-inicio"
       >
         <img src="assets/img/logo.webp" alt="Logo" width="30px" height="auto" />
         <p class="text-black fw-bolder m-0">The Book</p>
