--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
           matTooltip="Página Inicial"
           matTooltipPosition="below"
           matTooltipHideDelay="500"
-          id="logo"
+          id="link-voltar-inicio"
         >
           <p class="fw-bolder fs-2 text-dark hide">The Book</p>
           <img src="assets/img/logo.webp" alt="Logo" width="70px" height="auto">
