--- a/src/app/pages/meu-livro/meu-livro.component.html
+++ b/src/app/pages/meu-livro/meu-livro.component.html
@@ -1,16 +1,70 @@
-<section class="d-flex justify-content-center m-5 p-5">
+<section class="container d-flex justify-content-center align-items-center flex-column gap-4 my-5">
 
-  <form [formGroup]="form">
-    <mat-form-field appearance="outline">
-      <mat-label>Favorite Food</mat-label>
-      <mat-select [formControl]="foodControl" name="food">
-        <mat-option>None</mat-option>
-        @for (food of foods; track food) {
-          <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
-    <p class="fs-1">Selected: {{foodControl.value}}</p>
-  </form>
+  <div class="d-flex flex-column gap-3">
+    <div class="blur-container text-center">
+      <h1>{{userName()}}, esse é seu livro</h1>
+      <h3>Escolha quais categorias você deseja visualizar!</h3>
+    </div>
 
+      <div class="category-toggle mb-4">
+        <mat-button-toggle-group
+          [formControl]="filterControl"
+          multiple
+          aria-label="Filtrar categorias"
+        >
+          <mat-button-toggle
+            *ngFor="let cat of allCategories"
+            [value]="cat"
+          >
+            {{ cat }}
+          </mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+  </div>
+
+  <!-- Novo container centralizado -->
+  <div class="d-flex flex-column align-items-center" style="max-width: 70rem; width: 100%;">
+
+    <!-- Cards -->
+    <div class="d-flex flex-wrap gap-3 justify-content-center mb-5">
+      <div *ngFor="let receitas of filteredReceitas$ | async">
+        <app-card
+          [id]="receitas.id!"
+          [categoria]="receitas.categoria"
+          [nome]="receitas.titulo"
+          [home]="false"
+          (acao1)="editarReceita($event)"
+          (acao2)="irParaReceita($event)"
+          (acao3)="deletarReceita($event)"
+        ></app-card>
+      </div>
+  </div>
+
+    <div class="d-flex flex-row gap-3">
+
+       <button
+          class="btn btn-lg btn-warning text-white d-flex align-items-center gap-1"
+          id="button-voltar"
+          (click)="goBack()"
+          type="button"
+       >
+       <mat-icon>home</mat-icon>
+            INÍCIO
+       </button>
+
+      <button
+        class="btn btn-success btn-lg d-flex align-items-center gap-1"
+        (click)="redirectCriarReceita()"
+      >
+      <mat-icon>add_circle</mat-icon>
+        Crie mais receitas
+      </button>
+
+    </div>
+
+  </div>
 </section>
+
+
+
+
