--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -5,7 +5,7 @@
     <mat-card class="d-flex align-items-center m-auto h-auto p-5 shadow-lg gap-2">
 
       <div class="d-flex justify-content-start">
-        <a routerLink="/" style="cursor: pointer;">
+        <a id="link-voltar-inicio" routerLink="/" style="cursor: pointer;">
           <img src="assets/img/logo.webp" alt="logo" width="50px" height="auto" class="position-absolute top-0 start-0 m-3">
         </a>
       </div>
@@ -121,10 +121,12 @@
                 >
                   <button
                     matSuffix
+                    type="button"
                     (click)="clickEvent($event)"
                     [attr.aria-label]="'Hide password'"
                     [attr.aria-pressed]="hide()"
                     style="margin-right: 0.4em;"
+                    id="button-mostra-senha"
                   >
                     <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>
@@ -160,6 +162,7 @@
                     [attr.aria-label]="'Hide confirmaPassword'"
                     [attr.aria-pressed]="hide()"
                     style="margin-right: 0.4em;"
+                    id="button-mostra-senha"
                   >
                     <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>
