--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -8,6 +8,7 @@
             (click)="outraAcao()"
             class="card-link"
             [ngClass]="categoria"
+            [id]=`link-receita-${id}`
           >
             {{ nome }}
           </a>
@@ -21,6 +22,7 @@
         (click)="inserirAcao()"
         class="btn btn-sm btn-outline-dark fw-bolder blur-container d-flex align-items-center"
         style="width:40px; height: 40px;"
+        [id]=`button-editar-${id}`
       >
          <mat-icon>mode_edit</mat-icon>
       </button>
@@ -29,6 +31,7 @@
         (click)="inserirAcao2()"
         class="btn btn-sm btn-outline-dark fw-bolder blur-container d-flex align-items-center"
         style="width:40px; height: 40px;"
+        [id]=`button-deletar-${id}`
       >
          <mat-icon>delete_forever</mat-icon>
       </button>
