--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -25,18 +25,22 @@
 }
 
 .card-link {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  line-height: 1.3;
+  overflow: hidden;
 
   font-size: 2rem;
   font-weight: 1000;
   text-decoration: none;
   transition: color 0.3s ease, text-decoration 0.3s ease;
   cursor: pointer;
-  overflow: hidden;
-  line-height: 1.5;
-  padding-bottom: 1px;
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
+
 
 .card-link:hover {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
