chore(ids) adicionando ids para testes automatizados e2e

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="container d-flex justify-content-center align-items-center flex-column gap-4 my-5">
+<section class="container d-flex justify-content-center align-items-center flex-column gap-4 vh-100">
 
   <div class="blur-container text-center">
     <h1>Bem vindo, {{userName() || 'Visitante'}}!</h1>
