--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,8 @@ body {
   margin: 0;
   font-family: 'Fredoka', sans-serif;
   background-image: url('assets/img/backGround.png');
-  background-size: cover; // makes the image cover the whole screen
-  background-position: center center; // centers the image
+  background-size: cover;
+  background-position: center center;
 }
 
 .hide{
